Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 	layout=twoside  ,
 	titlepage=true  ,
 	preamble=false  ,
-	draftmode=true ,
+	draftmode=false ,
 ]{sbmthesis}
 \setlength\headheight{30pt} % required, do not delete
 
