--- a/mandatory/symbols.tex
+++ b/mandatory/symbols.tex
@@ -15,7 +15,13 @@
 
 \newglossaryentry{vmax}{
   name={\ensuremath{v_{\max}}},
-  description={Maximum permitted speed on the current road segment (link)},
+  description={Maximum speed of the specific vehicle type, which may differ from the legal speed limit},
+  unit={\ensuremath{\mathrm{m\,s^{-1}}}}
+}
+
+\newglossaryentry{vallowed}{
+  name={\ensuremath{v_{\mathrm{allowed}}}},
+  description={The legal speed limit of the current road segment (link)},
   unit={\ensuremath{\mathrm{m\,s^{-1}}}}
 }
 
