--- a/mandatory/symbols.tex
+++ b/mandatory/symbols.tex
@@ -286,9 +286,15 @@
   unit={\ensuremath{\mathrm{m\,s^{-1}}}}
 }
 
-\newglossaryentry{vopt}{
+\newglossaryentry{voptth}{
   name={\ensuremath{v_{\mathrm{opt,th}}}},
   description={Theoretical optimal speed to reach stop line at target time},
+  unit={\ensuremath{\mathrm{m\,s^{-1}}}}
+}
+
+\newglossaryentry{vopt}{
+  name={\ensuremath{v_{\mathrm{opt}}}},
+  description={Practical optimal speed to reach stop line at target time},
   unit={\ensuremath{\mathrm{m\,s^{-1}}}}
 }
 
