--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -208,6 +208,29 @@
   extra               = {System of equations describing the evolution of variables via their derivatives}
 }
 
+\DeclareAcronym{ovm}{
+  short = OVM,
+  long  = Optimal Velocity Model,
+  short-plural = OVMs,
+  long-plural  = Optimal Velocity Models
+}
+
+\DeclareAcronym{mae}{
+  short               = MAE,
+  long                = Mean Average Error,
+  short-plural-form   = MAEs,
+  long-plural-form    = Mean Average Errors,
+  extra               = {A metric representing the average of absolute differences between predicted and actual values}
+}
+
+\DeclareAcronym{rmse}{
+  short               = RMSE,
+  long                = Root Mean Square Error,
+  short-plural-form   = RMSEs,
+  long-plural-form    = Root Mean Square Errors,
+  extra               = {A metric representing the square root of the average of squared differences between predicted and actual values}
+}
+
 \DeclareAcronym{gan}{
   short               = GAN,
   long                = Generative Adversarial Network,
