--- a/mandatory/symbols.tex
+++ b/mandatory/symbols.tex
@@ -251,7 +251,7 @@
 }
 
 \newglossaryentry{tslackmax}{
-  name={\ensuremath{T_{\mathrm{slack\_max}}}},
+  name={\ensuremath{T_{\mathrm{slack, max}}}},
   description={Maximum allowable slack time in the optimization horizon},
   unit={\ensuremath{\mathrm{s}}}
 }
