--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -507,3 +507,43 @@
   long-plural-form    = Time-to-Cross values,
   extra               = {Estimated time required for a vehicle to reach and traverse an intersection or control point.}
 }
+
+\DeclareAcronym{vgdp}{
+  short               = VGDP,
+  long                = Variable-Grid Dynamic Programming,
+  short-plural-form   = VGDPs,
+  long-plural-form    = Variable-Grid Dynamic Programming methods,
+  extra               = {A dynamic programming variant that uses non-uniform discretisation to reduce computational cost while preserving solution accuracy.}
+}
+
+\DeclareAcronym{msdp}{
+  short               = MS-DP,
+  long                = Multi-Stage Dynamic Programming,
+  short-plural-form   = MS-DPs,
+  long-plural-form    = Multi-Stage Dynamic Programming methods,
+  extra               = {A dynamic programming approach that decomposes complex control problems into sequential sub-problems for improved tractability.}
+}
+
+\DeclareAcronym{qost}{
+  short               = QOST,
+  long                = Queue-Aware Optimal Speed Trajectory,
+  short-plural-form  = QOSTs,
+  long-plural-form   = Queue-Aware Optimal Speed Trajectories,
+  extra              = {A trajectory planning strategy that accounts for upstream queues when determining fuel- or delay-optimal speed profiles.}
+}
+
+\DeclareAcronym{ecomsq}{
+  short               = Eco-MS-Q,
+  long                = Modular Queue-Aware Multi-Signal Energy-Optimal Controller,
+  short-plural-form  = Eco-MS-Q controllers,
+  long-plural-form   = Modular Queue-Aware Multi-Signal Energy-Optimal Controllers,
+  extra               = {A control architecture integrating queue detection and multi-phase signal coordination for energy-optimal trajectory planning.}
+}
+
+\DeclareAcronym{soc}{
+  short               = SoC,
+  long                = State of Charge,
+  short-plural-form   = SoC levels,
+  long-plural-form    = States of Charge,
+  extra               = {The available battery energy expressed as a percentage of total capacity.}
+}
