--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 	language=en     ,
 	layout=twoside  ,
 	titlepage=true  ,
-	preamble=false  ,
+	preamble=true  ,
 	draftmode=false ,
 ]{sbmthesis}
 \setlength\headheight{30pt} % required, do not delete
