--- a/appendix/Results.tex
+++ b/appendix/Results.tex
@@ -353,7 +353,7 @@
 
 \begin{table}[ht]
   \centering
-  \caption{Tailpipe emissions (mean CO\(_2\) in g/km and NO\(_x\) in g/km) using HBEFA4 emission factors across varying traffic densities.}
+  \caption{Tailpipe emissions (mean \ac{co2} in g/km and \ac{nox} in g/km) using HBEFA4 emission factors across varying traffic densities.}
   \label{tab:emissions_hbefa4}
   \resizebox{\textwidth}{!}{%
       \begin{tabular}{llrrrrrrrrrrrr}
@@ -422,7 +422,7 @@
 
 \begin{table}[ht]
   \centering
-  \caption{Tailpipe emissions (mean CO\(_2\) in g/km and NO\(_x\) in g/km) using PHEMlight5 emission factors across varying traffic densities.}
+  \caption{Tailpipe emissions (mean \ac{co2} in g/km and NO\ac{nox} in g/km) using PHEMlight5 emission factors across varying traffic densities.}
   \label{tab:emissions_phemlight5}
   \resizebox{\textwidth}{!}{%
       \begin{tabular}{llrrrrrrrrrrrr}
