--- a/mandatory/abstract_de.tex
+++ b/mandatory/abstract_de.tex
@@ -1,7 +1,7 @@
-Urbane Verkehrsüberlastung und die damit verbundenen Umweltauswirkungen stellen eine entscheidende Herausforderung für die nachhaltige Mobilität dar. Kooperative Intelligente Verkehrssysteme (C-ITS), insbesondere Anwendungen wie der Grüne-Welle-Fahrassistent (GLOSA), bieten einen vielversprechenden technologischen Ansatz zur Minderung dieser Probleme durch die Optimierung von Fahrzeugtrajektorien an lichtsignalgesteuerten Knotenpunkten. Es besteht jedoch ein fundamentaler Zielkonflikt zwischen Regelungsstrategien, die den netzwerkweiten Verkehrsdurchsatz optimieren, und solchen, die die fahrzeugindividuelle Kraftstoffeffizienz priorisieren. Die Leistungsfähigkeit und die Kompromisse dieser unterschiedlichen Strategien, insbesondere unter variierenden Verkehrsdichten und Marktdurchdringungsraten, sind bislang nur unzureichend erforscht.
+Urbane Verkehrsüberlastung und die damit verbundenen Umweltauswirkungen stellen eine entscheidende Herausforderung für die nachhaltige Mobilität dar. \acp{c-its}, insbesondere \acl{glosa} (\acs{glosa})-Anwendungen, bieten einen vielversprechenden technologischen Ansatz, um diese Probleme durch die Optimierung von Fahrzeugtrajektorien an lichtsignalgesteuerten Knotenpunkten zu mindern. Jedoch besteht ein fundamentaler Zielkonflikt zwischen Regelungsstrategien, die den verkehrlichen Durchsatz auf Netzwerkebene optimieren, und solchen, die die Kraftstoffeffizienz auf Fahrzeugebene priorisieren. Die Leistungsfähigkeit und die Zielkonflikte dieser unterschiedlichen Strategien, insbesondere unter variierenden Verkehrsdichten und \aclp{mpr} (\acs{mpr}s), sind bislang nur unzureichend erforscht.
 \mynewline
-Diese Masterarbeit untersucht diesen Zielkonflikt systematisch durch die Entwicklung, Implementierung und rigorose Bewertung von zwei distinkten GLOSA-Reglern: einem flussoptimierten Algorithmus (Flow-GLOSA), der auf die Maximierung des Durchsatzes ausgelegt ist, und einem neuartigen, verbrauchsoptimierten Regler (Eco-GLOSA), der auf einem Framework der dynamischen Programmierung basiert, um den Kraftstoffverbrauch explizit zu minimieren. Diese Algorithmen wurden in einem hoch realistischen digitalen Zwilling des Stuttgarter Neckartors, einer realen städtischen Hauptverkehrsader, unter Verwendung der Simulationsplattform Simulation of Urban Mobility (SUMO) getestet. Um ein hohes Maß an Realismus zu gewährleisten, wurde das Erweiterte Intelligente Fahrermodell (EIDM) zur Erfassung nuancierter Stop-and-Go-Verhaltensweisen implementiert und die Emissionen wurden zur robusten Validierung sowohl mit dem HBEFA4- als auch mit dem physikbasierten PHEMlight5-Modell berechnet. Es wurde eine umfassende Simulationskampagne durchgeführt, die Verkehrsaufkommen von unter- bis vollständig gesättigten Bedingungen ($69\,\unit{veh/h}$ bis $3462\,\unit{veh/h}$) sowie Durchdringungsraten des Grüne-Welle-Fahrassistenten von $0\,\%$ bis $100\,\%$ abdeckte.
+Diese Arbeit untersucht diesen Zielkonflikt systematisch durch die Entwicklung, Implementierung und sorgfältige Evaluierung von zwei unterschiedlichen \ac{glosa}-Reglern: einem flussoptimierten Algorithmus (\acs{flow-glosa}), der auf die Maximierung des Durchsatzes ausgelegt ist, und einem neuartigen Eco-Driving-Regler (\ac{eco-glosa}), der auf einem \acl{dp} (\acs{dp})-Framework basiert, um den Kraftstoffverbrauch explizit zu minimieren. Diese Algorithmen wurden in einem hochrealistischen digitalen Zwilling des Stuttgarter Neckartors, einer realen städtischen Hauptverkehrsader, unter Verwendung der \acl{sumo} (\acs{sumo})-Plattform getestet. Um einen hohen Grad an Realismus zu gewährleisten, wurde in den Simulationen das \acl{eidm} (\ac{eidm}) zur Erfassung nuancierter Stop-and-Go-Verhaltensweisen integriert, und die Emissionen wurden zur robusten Validierung sowohl mit dem HBEFA4- als auch mit dem physikbasierten PHEMlight5-Modell berechnet. Es wurde eine umfassende experimentelle Untersuchung durchgeführt, bei der das Verkehrsaufkommen von unterbelasteten ($69\unit{\veh\per\hour}$) bis zu vollständig ausgelasteten Bedingungen ($3462\unit{\veh\per\hour}$) sowie variierenden \ac{glosa}-Marktdurchdringungsraten von $0\%$ bis $100\%$ systematisch evaluiert wurde.
 \mynewline
-Die Ergebnisse offenbaren eine ausgeprägte, dichteabhängige Leistungsdichotomie. Der verbrauchsoptimierte Regler erwies sich bei geringem bis moderatem Verkehrsaufkommen als äußerst effektiv und reduzierte die \ac{co2}-Emissionen durch die Glättung von Geschwindigkeitsprofilen und die Vermeidung von Stopps um bis zu $16\%$ im Vergleich zur ungeregelten Fahrt. In überlasteten Szenarien ($q > 2077\,\unit{veh/h}$) führte seine egoistische Optimierung jedoch paradoxerweise zu einer Verschlechterung der Netzwerkleistung, indem er schwere Stop-and-Go-Wellen induzierte, die die Emissionen um über $160\,\%$ erhöhten und den Verkehrsfluss katastrophal reduzierten. Im Gegensatz dazu zeigte der flussoptimierte Regler eine außergewöhnliche Robustheit. Unter gesättigten Bedingungen löste er bei hohen Marktdurchdringungsraten ($>80\,\%$) erfolgreich Staus auf, stellte freie Fließgeschwindigkeiten wieder her und erzielte dadurch tiefgreifende Emissionsminderungen von bis zu $64\,\%$ durch die Eliminierung der hochgradig ineffizienten Start-Stopp-Zyklen.
+Die Ergebnisse offenbaren eine deutliche, dichteabhängige Leistungszweiteilung. Der \ac{eco-glosa}-Regler erwies sich bei geringem bis moderatem Verkehrsaufkommen als wirksam und reduzierte die \ac{co2}-Emissionen durch die Glättung von Geschwindigkeitsprofilen und die Vermeidung von Stopps um bis zu $7.7\%$ im Vergleich zum ungesteuerten Fahren. In staubelasteten Szenarien ($q > 2077\unit{\veh\per\hour}$) führte seine egoistische Optimierung jedoch paradoxerweise zu einer Verschlechterung der Netzwerkleistung. Sie verursachte ausgeprägte Stop-and-Go-Wellen, die die Emissionen um über $160\%$ erhöhten und den Verkehrsfluss erheblich reduzierten. Im Gegensatz dazu zeigte der \ac{flow-glosa}-Regler eine außergewöhnliche Robustheit. Unter ausgelasteten Bedingungen verhinderte er bei hohen \acp{mpr} ($>80\%$) erfolgreich die Bildung von starkem Stau, erhielt die Reisegeschwindigkeit im freien Fluss aufrecht und erzielte dadurch tiefgreifende Emissionsreduktionen von über $66\%$ durch die Eliminierung der Stop-Start-Zyklen.
 \mynewline
-Die Forschung kommt zu dem Schluss, dass eine universell einsetzbare \enquote{one-size-fits-all}-Strategie für den Grüne-Welle-Fahrassistenten nicht zielführend ist. In überlasteten städtischen Umgebungen ist die Optimierung des Verkehrsflusses ein wirksameres und zuverlässigeres Mittel zur Erzielung systemweiter Umweltvorteile als eine kurzsichtige, fahrzeugzentrierte Eco-Driving-Optimierung. Die Erkenntnisse sprechen sich nachdrücklich für die Entwicklung hybrider, adaptiver GLOSA-Systeme aus, die ihre Regelungsziele auf der Grundlage von Echtzeit-Verkehrszustandsschätzungen dynamisch anpassen und mit zunehmender Verkehrsdichte von einer verbrauchsoptimierten zu einer flussorientierten Strategie übergehen.
+Diese Forschung kommt zu dem Schluss, dass eine universelle \enquote{one-size-fits-all}-\ac{glosa}-Strategie nicht zielführend ist. In stark belasteten städtischen Umgebungen ist die Optimierung des Verkehrsflusses ein wirksameres und zuverlässigeres Mittel zur Erzielung systemweiter Umweltvorteile als eine kurzsichtige, fahrzeugbezogene Eco-Driving-Optimierung. Die Ergebnisse legen die Entwicklung von hybriden, adaptiven \ac{glosa}-Systemen nahe. Solche Systeme würden ihre Regelungsziele dynamisch auf der Grundlage von Echtzeit-Verkehrszustandsschätzungen anpassen und bei zunehmender Verkehrsdichte von einer ökologischen zu einer flussorientierten Strategie übergehen.
